# wizipragma

./: .env.example  .gitignore  BEDROCK-AGENTCORE-VALIDATION.md  BEDROCK-MANUAL-STEPS.md  BEDROCK-SETUP-STATUS.md  CHAT-FIX-REPORT.md  CONTRIBUTING.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT-UNIT2.md  DEPLOYMENT-UNIT3.md  DEPLOYMENT-UNIT4.md  FRONTEND-STATUS.md  GITHUB-PUSH-SUMMARY.md  IMAGES-IMPROVEMENT.md  INTEGRATION-GUIDE.md  MENSAJE-PARA-EQUIPO.md  ONBOARDING-TEAM.md  README.md  RESUMEN-CORRECCION.md  SESSION-RESUME.md  SOLUCIONES-DEFINITIVAS.md  SYNC-SUMMARY.md  TEAM-STATUS.md  UX-UI-IMPROVEMENTS.md  VOICE-IMAGE-MODELS-STATUS.md  WEBSOCKET-FIX.md  bucket-policy.json  check-deployment.sh  create-new-cloudfront.sh  fix-cloudfront-cache.sh  poc_template.yaml  pyproject.toml  pytest.ini  samconfig.toml  seed_test_user.py  template.yaml  test-chat-functionality.html  test-cloudfront-cache.sh  test-websocket.html  test_websocket.py
aidlc-docs/: TEAM-DISTRIBUTION-PLAN.md  aidlc-state.md  audit.md
archive/: ACTUALIZACION-AVATAR-COMFI.md  ACTUALIZACION-IDENTIDAD-COMFI.md  ARQUITECTURA-ACTUAL-COMFI.md  COMFI-INFRAESTRUCTURA-NUEVA.md  CREAR-BUCKET-COMFI.md  DEPLOY-COMPLETO-COMFI.md  DEPLOY-CORRECCION-FINAL.sh  DEPLOY-FRONTEND-MANUAL-FAQ.md  DEPLOY-URGENTE.md  DEPLOY-UX-MEJORAS-COMFI.md  DEPLOYMENT-EXITOSO.md  DIAGRAMA-ARQUITECTURA-SIMPLE.md  EQUIPO-AGENTES-CENTLI.md  ESTADO-FAQ-COMFI.md  ESTADO-PROYECTO.md  FAQ-IMPLEMENTACION-COMPLETA.md  GUIA-PRUEBAS-FAQ.md  IMAGES-IMPROVEMENT.md  INSTRUCCIONES-DEBUG.md  INSTRUCCIONES-DEPLOY-BACKEND.md  INSTRUCCIONES-DEPLOYMENT.md  (+39 more)
(+316 files in other folders)
