[tool.poetry]
name = "BankIA - Coach Financial"
version = "0.1.0"
description = "BankIA project - creating a conversational interface powered by GenAI"
authors = ["Santiago Higuita <santiago.higuitau@pragma.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
loguru = "^0.7.2"
requests = "^2.32.3"
tqdm = "^4.66.4"
python-dotenv = "^1.0.1"
boto3 = "^1.34.149"
ipykernel = "^6.29.5"
langchain-aws = "^0.2.0"
pandas = "2.1.1"
streamlit = "^1.47.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
moto = "^4.2.0"
boto3-stubs = {extras = ["dynamodb", "events", "apigatewaymanagementapi", "bedrock-agent-runtime"], version = "^1.34.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
